force-app/main/default/objects/VI_LOG_CALLOUT__b/VI_LOG_CALLOUT__b.object-meta.xml
<CustomObject>
    <description>Logs for the VI / Pure Player Callouts</description>
    <label>VI LOG CALLOUT</label>
    <pluralLabel>VI LOG CALLOUT</pluralLabel>
</CustomObject>