force-app/main/default/objects/VI_LOG_CALLOUT__b/fields/Body_Response__c.field-meta.xml
<CustomField>
    <fullName>Body_Response__c</fullName>
    <label>Body Response</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>